--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
 
-<!-- The CSS/Design and look of the webpage --!>
+<head> 
+
+<!-- The CSS/Design and look of the webpage -->
 
 <style>
 h1{
@@ -16,7 +18,9 @@ body{
 }
 </style>
 
-<!-- The webpage's text, information, and pictures --!>
+<!-- The webpage's text, information, and pictures -->
+
+</head>
 
 <body>
 <title>Blue Mountain</title>
