--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body{
 <body>
 <title>Blue Mountain</title>
 <h1>All About Blue Mountain</h1>
+<p>Have you ever wanted to go skiing? I know the perfect ski resort for you; Blue Mountain. Blue Mountain is a large mountain, with a small village with fun activities. You can go on roller coasters, ski down the hill(in winter, of course), eat ice cream, etc. Blue Mountain is located in Ontario, Canada.</p>
 </body>
 
 </html>
