--- a/index.html
+++ b/index.html
@@ -2,30 +2,25 @@
 <html>
 
 <head> 
+    <!-- The CSS/Design and look of the webpage -->
+    <title>Blue Mountain</title>
+    <style>
+        h1 {
+            font-size: 3em;
+            font-family: sans-serif;
+            text-align: center;
+        }
 
-<!-- The CSS/Design and look of the webpage -->
-
-<style>
-h1{
-	font-size: 3em;
-	font-family:sans-serif;
-	text-align:center;
-}
-
-body{
-	background-color:lime	
-
-}
-</style>
-
-<!-- The webpage's text, information, and pictures -->
-
+        body {
+            background-color: lime; /* Added missing semicolon */
+        }
+    </style>
 </head>
 
 <body>
-<title>Blue Mountain</title>
-<h1>All About Blue Mountain</h1>
-<p>Have you ever wanted to go skiing? I know the perfect ski resort for you; Blue Mountain. Blue Mountain is a large mountain, with a small village with fun activities. You can go on roller coasters, ski down the hill(in winter, of course), eat ice cream, etc. Blue Mountain is located in Ontario, Canada.</p>
+    <!-- The webpage's text, information, and pictures -->
+    <h1>All About Blue Mountain</h1>
+    <p>Have you ever wanted to go skiing? I know the perfect ski resort for you; Blue Mountain. Blue Mountain is a large mountain, with a small village with fun activities. You can go on roller coasters, ski down the hill (in winter, of course), eat ice cream, etc. Blue Mountain is located in Ontario, Canada.</p>
 </body>
 
 </html>
